--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
 			body {
 				background-color: #944;
 			}
-			p {
+			div {
 				text-align : center;
 			}
 		</style>
 
 	</head>
 	<body>
-		
-		<p><a href="assets/Page/table.html">Uppgift 1</a>
-		   hej
-		</p>
+		<div>	
+			<a href="assets/Page/table.html">Uppgift 1</a>
+			<a href="assets/Page/uppgift_2_semantik.html">Uppgift 2</a>
+		</div>
 		
 		
 	</body>
