--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 	</head>
 	<body>
 		<div>	
-			<a href="assets/Page/table.html">Uppgift 1</a>
-			<a href="assets/Page/uppgift_2_semantik.html">Uppgift 2</a>
+			<p1><a href="assets/Page/table.html">Uppgift 1</a></p1>
+			<p2><a href="assets/Page/uppgift_2_semantik.html">Uppgift 2</a></p2>
 		</div>
 		
 		
