--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
 
 	</head>
 	<body>
+		<div id="header">
+			<header>
+				<h1>Min Webbutvecklingshemsida</h1>
+			</header>
+		</div>
+		
 		<div>	
 			<p><a href="assets/Page/table.html">Uppgift 1</a></p>
 		</div>
