--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 	<head>
 		<meta charset="UTF-8">
@@ -11,7 +11,7 @@
 			body {
 				background-color: #944;
 			}
-			div {
+			div{
 				text-align : center;
 			}
 		</style>
@@ -25,12 +25,10 @@
 		</div>
 		
 		<div>	
-			<p><a href="assets/Page/table.html">Uppgift 1</a></p>
-		</div>
-		<div>	
+			<p><a href="assets/Page/table.html">Uppgift 1</a></p>	
 			<p><a href="assets/Page/uppgift_2_semantik.html">Uppgift 2</a></p>
-		</div>
-		
+			<p><a href="assets/Page/uppgift_3.html">Uppgift 3</a></p>
+		</div>	
 		
 	</body>
 
