--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 			<p><a href="assets/Page/table.html">Uppgift 1</a></p>	
 			<p><a href="assets/Page/uppgift_2_semantik.html">Uppgift 2</a></p>
 			<p><a href="assets/Page/uppgift_3.html">Uppgift 3</a></p>
-			<p><a href="#">Uppgift 4</a></p>
-			<p><a href="#">Uppgift 5</a></p>
+			<p><a href="assets/Page/uppgift_4.html">Uppgift 4</a></p>
+			<p><a href="assets/Page/uppgift_5.html">Uppgift 5</a></p>
 			<p><a href="#">Uppgift 6</a></p>
 			<p><a href="assets/Page/examUppgift.html">Slutuppgift</a></p>
 		</div>	
